--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -14,6 +14,18 @@ mysql-connector-python = "^8.1.0"
 passlib = "^1.7.4"
 bcrypt = "^4.0.1"
 email-validator = "^2.0.0.post2"
+arxiv = "^1.4.8"
+langchain = "^0.0.292"
+unstructured = "^0.10.15"
+pdf2image = "^1.16.3"
+pdfminer = "^20191125"
+pdfminer-six = "^20221105"
+openai = "^0.28.0"
+anthropic = "^0.3.11"
+requests = "^2.31.0"
+pytest = "^7.4.2"
+pytest-asyncio = "^0.21.1"
+apscheduler = "^3.10.4"
 
 
 [build-system]
